<resources>
    <string name="app_name">News Reader</string>
    <string name="action_settings">Filters</string>
    <string name="search_query_hint">Search</string>
    <string name="title_activity_article">ArticleActivity</string>

    <string name="filter_newsdesks">News Desks</string>
    <string name="filter_newsdesk_sports">Sports</string>
    <string name="filter_newsdesk_fashion"><![CDATA[Fashion & Style]]></string>
    <string name="filter_newsdesk_arts">Arts</string>
    <string name="filter_newsdesk_foreign">Foreign</string>
    <string name="filter_save">Save</string>
    <string name="filter_begin_date">Start Date</string>
    <string name="filter_sortorder">Sort order</string>

    <string name="menu_share">Share</string>
    <string name="alert_no_internet">Could not connect to the New York Times. Please check your internet connection.</string>
    <string name="alert_no_search_results">No articles where found that match your search. Try broadening your search.</string>
    <string name="alert_no_more_search_results">No more articles are available that match your search.</string>
</resources>
