<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="60dp"
    tools:context="com.smacgregor.newyorktimessearch.searching.SearchFilterDialog"
    android:weightSum="1">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.29"
        android:useDefaultMargins="true"
        android:columnCount="2"
        android:rowCount="6">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/filter_begin_date"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/edit_start_date"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/filter_sortorder" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_sort_order"
            android:layout_row="1"
            android:layout_column="1"
            android:spinnerMode="dialog"
            android:entries="@array/sort_order_array"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/filter_newsdesks"
            android:layout_row="2"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_newsdesk_sports"
            android:id="@+id/checkbox_sports"
            android:layout_row="2"
            android:layout_column="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_newsdesk_fashion"
            android:id="@+id/checkbox_fashion"
            android:layout_row="3"
            android:layout_column="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_newsdesk_arts"
            android:id="@+id/checkbox_arts"
            android:layout_row="4"
            android:layout_column="1"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_newsdesk_foreign"
            android:id="@+id/checkbox_foreign"
            android:layout_row="5"
            android:layout_column="1"
            android:checked="false" />
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_save"
        android:id="@+id/button_save_search_filter"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
